--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
 5.Create a website having Image map <a href="./practical5.html">Practical-5</a>
 
-5.Create a Card Layout using CSS layout properties. <a href="./practical6.html">Practical-6</a>
+6.Create a Card Layout using CSS layout properties. <a href="./practical6.html">Practical-6</a>
+
+7.Create a Card Layout using CSS layout properties. <a href="#">Practical-6</a>
+
+5.Create a Web Page having Fixed Navigation Bar with the given content. <a href="./practical8.html">Practical-6</a>
 </pre>
 </body>
 
